--- a/styles/header.css
+++ b/styles/header.css
@@ -14,6 +14,13 @@ body {
     width: 100%;
 }
 
+.container h1 {
+    text-align: center;
+    color: #ffffff;
+    
+margin-top: 5rem;
+}
+
 /* HEADER */
 .cabecalho {
     position: relative;
