--- a/styles/news.css
+++ b/styles/news.css
@@ -3,15 +3,17 @@
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-  z-index: 5;
+    z-index: 5;
     justify-content: center;
+    margin: 1rem 0;
+    gap: 1rem;
 
 }
 
 .noticias {
-    margin: 1rem;
+    margin: 0 0.5rem;
     padding: 1rem;
-    background-color: #ffc7ce;
+    background-color: #ffc0d5;
     border-radius: 1rem;
     box-shadow: 0 0 0.5rem #ff768d;
     max-width: 15rem;
@@ -30,9 +32,23 @@
 
 .noticias h3 {
     font-size: 1.1rem;
-    color: #ff3d54;
+    color: #ff7182;
 }
 
 .noticias p {
-    color: #ff3d54;
+    color: #ff7182;
+}
+
+@media(max-width: 543px) {
+    .noticias {
+        max-width: none;
+    }
+
+    .noticias h3 {
+        font-size: 4.5vw;
+    }
+
+    .noticias p {
+        font-size: 3.5vw
+    }
 }
